--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,7 +5,15 @@ layout: none
 {%- include snippets/get-lang.html -%}
 <html lang="{{ __return }}">
   <head>
-    {%- include analytics.html -%}
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-T5SPBDBP');</script>
+  <!-- End Google Tag Manager -->
+
+    {%- include analytics.html -%}  
     {%- include head.html -%}
     <script>
       {%- include scripts/utils/utils.js -%}
@@ -16,6 +24,12 @@ layout: none
   </head>
   <body>
     <div class="root" data-is-touch="false">
+
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T5SPBDBP"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
       {{ content }}
     </div>
     <script>
